# barcode

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
CMake/: 3rdPartyPackages.cmake  Build3rdParty.cmake
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  dct.cpp  dct.h  decoder.cpp  decoder.h  image.cpp  image.h  scanline.cpp  scanline.h  types.h
tests/: CMakeLists.txt  test_dct.cpp  test_decoder.cpp  test_integration.cpp  test_scanline.cpp
visualizer/: CMakeLists.txt  main.cpp
